conformance/0.1/expected/errors/whitespace-after-sigil.cdx
<ExpectedError category=~syntax reason=~gloss-syn-whitespace-after-sigil/>
